@@ -2,6 +2,7 @@ export type SettingsData = {
     loggerType: string,
     logOutputFolder: string,
     globalNodeModules: string,
+    sapLandscape?: string,
     r3transDocker?: boolean,
     r3transDockerName?: string
 }
